# SqlWrapper

./: .gitignore  CMakeLists.txt  README.md  SqlWrapperConfig.cmake.in
examples/: CMakeLists.txt  parseArgs.h  select.cpp  statement.cpp
include/: connection.h  database.h  db_row.h  selector.h  statement.h  transaction.h  transaction_statement.h
src/: connection.cpp  connection_impl.cpp  connection_impl.h  data.cpp  data.h  db_row.cpp  db_row_impl.cpp  db_row_impl.h  statement.inl  statement_impl.cpp  statement_impl.h  transaction.cpp  transaction.h  transaction_statement_impl.cpp  transaction_statement_impl.h
src/oracle/: connection_impl.cpp  connection_impl.h  db_row_impl.cpp  db_row_impl.h  error_impl.h  selector_impl.cpp  selector_impl.h  statement_impl.cpp  statement_impl.h  transaction_impl.cpp  transaction_impl.h  transaction_statement_impl.cpp  transaction_statement_impl.h
src/pq/: connection_impl.cpp  connection_impl.h  db_row_impl.cpp  db_row_impl.h  selector_impl.cpp  selector_impl.h  statement_base_impl.cpp  statement_base_impl.h  statement_impl.cpp  statement_impl.h  transaction_impl.cpp  transaction_impl.h  transaction_statement_impl.cpp  transaction_statement_impl.h
src/sqlite/: connection_impl.cpp  connection_impl.h  db_row_impl.cpp  db_row_impl.h  selector_impl.cpp  selector_impl.h  sqlitedb.cpp  statement_base_impl.cpp  statement_base_impl.h  statement_impl.cpp  statement_impl.h  transaction_impl.cpp  transaction_impl.h  transaction_statement_impl.cpp  transaction_statement_impl.h
